--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+   from = "/*"
+   to = "/"
+   status = 200
+
+[build]
+  command = "npm run build && npm run export"
+  publish = "out"
